# HIT-IR03000100-Final-Assignment

./: .gitignore  CMakeLists.txt  README.md
src/: Color.hpp  Config.hpp  OpenGLContainer.cpp  OpenGLContainer.h  main.cpp
src/DataModel/: InputDataModel.hpp
src/Entity/: Camera.cpp  Camera.h  Cube.cpp  Cube.h  Light.cpp  Light.h  MonoBehaviour.cpp  MonoBehaviour.h  Sphere.cpp  Sphere.h  SpriteRenderer.cpp  SpriteRenderer.h  Triangle.cpp  Triangle.h
src/Shaders/: CubeFragmentShader.glsl  CubeVertexShader.glsl  DefaultFragmentShader.glsl  DefaultVertexShader.glsl  PhongFragmentShader.glsl  PhongVertexShader.glsl
src/Utils/: Shader.cpp  Shader.h  TextureLoader.cpp  TextureLoader.h  Utils.cpp  Utils.h  Vector.cpp  Vector.hpp
